fixed collapse shown bp

--- a/src/scss/_collapse.scss
+++ b/src/scss/_collapse.scss
@@ -123,17 +123,20 @@ In this file:
     // Shown Breakpoints
 
     @each $breakpoint in map.keys(breakpoint.$breakpoints) {
-        @include breakpoint.breakpoint-up($breakpoint) {
-            $mod: breakpoint.breakpoint-modifier($breakpoint, breakpoint.$breakpoints);
+        $mod: breakpoint.breakpoint-modifier($breakpoint, breakpoint.$breakpoints);
 
-            .collapse.shown#{$mod} {
-                grid-template-rows: 1fr;
-                visibility: visible;
+        @if $mod != '' {
+            @include breakpoint.breakpoint-up($breakpoint) {
 
-                overflow: unset;
+                .collapse.shown#{$mod} {
+                    grid-template-rows: 1fr;
+                    visibility: visible;
 
-                @supports (interpolate-size: allow-keywords) {
-                    height: auto;
+                    overflow: unset;
+
+                    @supports (interpolate-size: allow-keywords) {
+                        height: auto;
+                    }
                 }
             }
         }
